@@ -11,44 +11,59 @@ class SearchController
         $this->getAllImages = $getAllImages;
     }
 
-    public function getAllAvailableImages()
+    public function getAllAvailableImages(string $search)
     {
         $allImages = $this->getAllImages->getAllHostImages();
         $output = [];
         $seenFingerPrints = [];
         $unknownCount = 0;
-        foreach ($allImages as $host => $details) {
-            foreach ($details["images"] as $image) {
-                if (in_array($image["fingerprint"], $seenFingerPrints)) {
-                    continue;
-                }
+        foreach ($allImages["standalone"]["members"] as $host) {
+            $this->doWork($output, $seenFingerPrints, $host->getCustomProp("images"), $unknownCount, $search);
+        }
 
-
-                if (!isset($image["properties"]["description"])) {
-                    $unknownCount++;
-                    $image["properties"]["description"] = "Unknown $unknownCount";
-                }
-
-                if (!isset($image["update_source"]) || empty($image["update_source"])) {
-                    $image["update_source"] = [
-                        "protocol"=>"lxd",
-                        "server"=>$host,
-                        "provideMyHostsCert"=>true
-                    ];
-                } else {
-                    $image["update_source"]["provideMyHostsCert"] = false;
-                }
-
-                $output[] = [
-                    "description"=>$image["properties"]["description"],
-                    "details"=>array_merge(
-                        $image["update_source"],
-                        ["fingerprint"=>$image["fingerprint"]]
-                    )
-                ];
-                $seenFingerPrints[] = $image["fingerprint"];
+        foreach ($allImages["clusters"] as $cluster) {
+            foreach ($cluster["members"] as $host) {
+                $this->doWork($output, $seenFingerPrints, $host->getCustomProp("images"), $unknownCount, $search);
             }
         }
         return $output;
+    }
+
+    private function doWork(&$output, &$seenFingerPrints, $images, & $unknownCount, $search)
+    {
+        foreach ($images as $image) {
+            if (in_array($image["fingerprint"], $seenFingerPrints)) {
+                continue;
+            }
+
+
+            if (!isset($image["properties"]["description"])) {
+                $unknownCount++;
+                $image["properties"]["description"] = "Unknown $unknownCount";
+            } else {
+                if (stripos($image["properties"]["description"], $search) === false) {
+                    continue;
+                }
+            }
+
+            if (!isset($image["update_source"]) || empty($image["update_source"])) {
+                $image["update_source"] = [
+                    "protocol"=>"lxd",
+                    "server"=>$host,
+                    "provideMyHostsCert"=>true
+                ];
+            } else {
+                $image["update_source"]["provideMyHostsCert"] = false;
+            }
+
+            $output[] = [
+                "description"=>$image["properties"]["description"],
+                "details"=>array_merge(
+                    $image["update_source"],
+                    ["fingerprint"=>$image["fingerprint"]]
+                )
+            ];
+            $seenFingerPrints[] = $image["fingerprint"];
+        }
     }
 }
