@@ -108,7 +108,7 @@
 var currentCloudConfigId = null;
 
 $("#cloudConfigImage").tokenInput(globalUrls.images.search.searchAllHosts, {
-    queryParam: "image",
+    queryParam: "search",
     tokenLimit: 1,
     propertyToSearch: "description",
     theme: "facebook",
