@@ -121,7 +121,7 @@ $("#deployCloudConfigHosts").tokenInput(globalUrls.hosts.search.search, {
 });
 
 $("#deployCloudConfigImage").tokenInput(globalUrls.images.search.searchAllHosts, {
-    queryParam: "image",
+    queryParam: "search",
     tokenLimit: 1,
     propertyToSearch: "description",
     theme: "facebook",
