@@ -1,3 +1,11 @@
+Unrelead
+
+Fixed
+    Cant search for images (#122)
+
+Changed
+    Imges will now actually filter results of the search and not return everything
+
 0.9.0 - 27/06/2020
 
 Added
